--- a/Chrome/app/_locales/en/messages.json
+++ b/Chrome/app/_locales/en/messages.json
@@ -1,10 +1,10 @@
 {
   "appName": {
-    "message": "github extension",
+    "message": "Github enhancement suite",
     "description": "The name of the application"
   },
   "appDescription": {
-    "message": "My Chrome Extension",
+    "message": "Github enhance plugin for Google Chrome",
     "description": "The description of the application"
   }
 }
